fixed form vertical-align. Closes #49

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -107,7 +107,8 @@ form legend {
 input, 
 textarea {
     padding: 4px;
-    margin-bottom: 9px;
+    margin-bottom: 5px;
+    margin-top: 5px;
     font-family: Helvetica,arial,freesans,clean,sans-serif;
     font-size: 13px;
     line-height: 18px;
